<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/gap_half_8dp"
        android:hint="@string/name_input_layout_hint"
        app:layout_constraintBottom_toTopOf="@+id/package_input_layout"
        app:layout_constraintTop_toBottomOf="@id/delete_app_button"
        app:layout_constraintVertical_chainStyle="packed">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name_edit_text"
            android:lines="1"
            android:maxLines="1"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/package_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/gap_half_8dp"
        android:hint="@string/package_input_layout_hint"
        app:layout_constraintBottom_toTopOf="@+id/tags_input_layout"
        app:layout_constraintTop_toBottomOf="@+id/name_input_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/package_edit_text"
            android:lines="1"
            android:maxLines="1"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tags_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/gap_half_8dp"
        android:hint="@string/tags_input_layout_hint"
        app:layout_constraintBottom_toTopOf="@id/save_app_button"
        app:layout_constraintTop_toBottomOf="@+id/package_input_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tags_edit_text"
            android:lines="1"
            android:maxLines="1"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/delete_app_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/gap_standard_16dp"
        android:text="@string/delete_app_record_button_text"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/save_app_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/gap_standard_16dp"
        android:text="@string/save_app_record_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>